package org.issuetracker.model;

public enum Priority {
    BLOCKER, CRITICAL, MAJOR, MINOR, TRIVIAL
}